--- a/src/register.html
+++ b/src/register.html
@@ -44,6 +44,10 @@
 				   var inner=document.getElementById("in");
 				   inner.innerHTML="<font color='red'>确认密码为空</font>";
 			  }
+			  if(password.value!=password1.value){
+			      var inner=document.getElementById("in");
+				   inner.innerHTML="<font color='red'>密码不一致</font>";
+			  }
 			  else{
 			  var inner=document.getElementById("in");
 			   inner.innerHTML="";
