--- a/demo/src/main/webapp/login.html
+++ b/demo/src/main/webapp/login.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 <div id="box"></div>
-<div class="cent-box">
+<div class="cent-box register-box">
 	<div class="cent-box-header">
 		<h1 class="main-title hide">CoCo-Flyer</h1>
 		<h2 class="sub-title">CoCo-Flyer - 爱生活爱电影</h2>
